we are now scaling images in the continuous view to avoid that they are too wide

--- a/ld-core.css
+++ b/ld-core.css
@@ -30,10 +30,13 @@
     --ld-slide-width: 1920px;   /* cf. lectureDoc2.presentation.slide.width */
     --ld-slide-height: 1200px;  /* cf. lectureDoc2.presentation.slide.height */
 
-    /*  The default zoom levels. 
-        */
+    /*  The default zoom levels. */
     --ld-light-table-zoom-level: 0.2;   /* may be overridden from within LectureDoc */ 
     --ld-continuous-view-zoom-level: 0.5; /* hard coded - cannot be changed by the user  */
+
+    --ld-rel-max-supplemental-area-width: 75%; 
+    --ld-rel-max-supplemental-area-height: 70%; 
+  
 }
 
 /* Additional basic normalization. */
@@ -273,6 +276,18 @@ div {
 
 .ld-continuous-view-slide-number {
     position: absolute;
+}
+
+/* We have to scale images in the supplemental information to ensure that they
+   are not larger than the maximum width of the slide.
+*/
+#ld-continuous-view-pane div.supplemental img {
+    /* TODO: find better formula for scaling images in the supplemental area in
+              continuous view mode.
+       Conceptually we would like to use a calculation that ensures that the image
+       is always appropriately scaled, but this doesn't work at the moment.
+    */
+    scale: calc( 0.5 / 0.75); 
 }
 
 @media print { /* at least Safari seems to honor this setting...*/
